# dataset-scraper

./: .gitignore  README.md  config.py  fishes.json  inat_download.py  main.py  pyproject.toml  upload-dataset.py
src/: dataset_store.py  download_no_fish.py  download_other_fish.py  http.py  inat_download.py  taxon_utils.py
src/downloaders/: no_fish.py  pinned_species.py  unknown_fish.py
