[project]
name = "dataset-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.4.22",
    "datasets>=4.8.4",
    "huggingface-hub>=1.11.0",
    "openimages",
    "pyrate-limiter>=4.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.4",
]
